# quantifying-barriers-of-urban-mobility

./: .gitignore  CITATION.cff  LICENSE  README.md  pipeline.rb  pipeline_group.py  pipeline_libertybridge.rb  pipeline_weekday_weekend.rb  pyproject.toml  replace_device_ids.py
data/: admin10.geojson  barriers_mp.geojson  barriers_mps.geojson  barriers_railways.geojson  barriers_river.geojson  budapest.geojson  downtown.geojson  duna_linestring.geojson  place_connections_2019-06-01_2019-06-02.csv  place_connections_2019-06-01_2019-06-02_downtown.csv  place_connections_2019-06-08_2019-06-09.csv  place_connections_2019-06-08_2019-06-09_downtown.csv  place_connections_2019-06-15_2019-06-16.csv  place_connections_2019-06-15_2019-06-16_downtown.csv  place_connections_2019-06-22_2019-06-23.csv  place_connections_2019-06-22_2019-06-23_downtown.csv  place_connections_2019-06-29_2019-06-30.csv  place_connections_2019-06-29_2019-06-30_downtown.csv  place_connections_2019-07-06_2019-07-07.csv  place_connections_2019-07-06_2019-07-07_downtown.csv  place_connections_2019-07-13_2019-07-14.csv  place_connections_2019-07-13_2019-07-14_downtown.csv  place_connections_2019-07-20_2019-07-21.csv  place_connections_2019-07-20_2019-07-21_downtown.csv  place_connections_2019-07-27_2019-07-28.csv  place_connections_2019-07-27_2019-07-28_downtown.csv
src/: add_movements_to_empty_mesh.py  calculate_barrier_crossings.py  calculate_community_crossings.py  clip_to_downtown.py  convert_to_edgelist.py  fit_area_symdiff.py  generate_beeline_trips.py  generate_full_mesh.py  get_rivers.py  get_roads.py  gravity.jl  null_model.py  (+8 more)
(+206 files in other folders)
