[tool.poetry]
name = "Neighborhoods and Boundaries"
version = "0.1.0"
description = "Scripts for reproducing the results of the research paper Neighborhoods and Boundaries of Urban Mobility"
authors = ["Gergő Pintér <gergo.pinter@uni-corvinus.hu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "~6.0"
pandas ="~2.0.1"
geopandas = "~0.13.2"
shapely = "~2.0.1"
pyogrio = "~0.6.0"
numpy = "~1.25.1"
scikit-learn = "~1.3.0"
more-itertools = "~10.1.0"
networkx = "~3.1"
osmnx = "~1.4.0"
seaborn = "~0.12.2"
matplotlib = "~3.7.2"
matplotlib-scalebar = "~0.8.1"
haversine = "~2.8.0"
pyarrow = "~13.0.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
