[tool.poetry]
name = "Quantifying Barriers of Urban Mobility"
version = "0.1.0"
description = "Scripts for reproducing the results of the research paper Quantifying Barriers of Urban Mobility"
authors = ["Gergő Pintér <gergo.pinter@uni-corvinus.hu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.13"
pandas = "~2.2"
PyYAML = "~6.0"
geopandas = "~1.0"
shapely = "~2.0"
pyogrio = "~0.10"
numpy = "~2.2"
scikit-learn = "~1.6"
more-itertools = "~10.5"
networkx = "~3.4"
osmnx = "~2.0"
seaborn = "~0.13"
matplotlib = "~3.10"
matplotlib-scalebar = "~0.8.1"
haversine = "~2.8.0"
pyarrow = "~18.0"

[tool.poetry.group.dev.dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
